refactor: modernize URL construction, remove unused imports, close resource leak, and update API calls
add missing topology.txt